<resources>
    <string name="app_name">FlirOneCamera</string>
    <string name="title_text">Thermal Camera App</string>
    <string name="sdk_version_text">Thermal SDK version %1$s</string>
    <string name="sdk_commit_hash_text">Thermal SDK commit %1$s</string>
    <string name="connect_f1_text">Connect\nFLIR ONE</string>
    <string name="connect_sim1_text">Connect\nSimulator 1</string>
    <string name="connect_sim2_text">Connect\nSimulator 2</string>
    <string name="connection_status_text">Status %1$s</string>
    <string name="discovery_status_text">Discovery status %1$s</string>
    <string name="temperature_text">Temp: %s</string>
    <string name="start_discovery_text">start Discovery</string>
    <string name="stop_discovery_text">stop Discovery</string>
    <string name="disconnect_text">Disconnect</string>
</resources>
